<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Título da aplicação -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp" />

    <!-- Label Valor 1 -->
    <TextView
        android:id="@+id/label_valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value1_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp" />

    <!-- Entrada do Valor 1 -->
    <EditText
        android:id="@+id/input_valor1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_valor1"
        android:layout_marginHorizontal="32dp"
        android:padding="8dp"
        tools:ignore="LabelFor" />

    <!-- Label Valor 2 -->
    <TextView
        android:id="@+id/label_valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value2_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/input_valor1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp" />

    <!-- Entrada do Valor 2 -->
    <EditText
        android:id="@+id/input_valor2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_valor2"
        android:layout_marginHorizontal="32dp"
        android:padding="8dp"
        tools:ignore="LabelFor" />

    <!-- Botões de Operações -->
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/input_valor2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_somar"
            style="@style/CustomButton"
            android:text="@string/plus_text"

            />

        <Button
            android:id="@+id/btn_subtrair"
            style="@style/CustomButton"
            android:text="@string/minus_text" />

        <Button
            android:id="@+id/btn_multiplicar"
            style="@style/CustomButton"
            android:text="@string/times_text" />

        <Button
            android:id="@+id/btn_dividir"
            style="@style/CustomButton"
            android:text="@string/divide_text" />
    </LinearLayout>

    <!-- Resultado -->
    <TextView
        android:id="@+id/result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/button_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
